--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/(tabs)/_layout.jsx", "app/+not-found.jsx", "app/_layout.jsx"  ]
+, "app/(tabs)/_layout.jsx", "app/+not-found.jsx", "app/_layout.jsx", "utils/supabase.jsx"  ]
 }
