--- a/app.json
+++ b/app.json
@@ -28,7 +28,13 @@
     },
     "plugins": [
       "expo-router",
-      "expo-video"
+      "expo-video",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your media to let you share them with your friends."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
