--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.44.2",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~51.0.18",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
